# PRDforge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: build-and-push.yml  test.yml
agents/: prd-specialist.md
api/: Dockerfile  app.py  auth.py  auth_contract.py  errors.py  requirements.txt  ws.py
api/static/: index.html
db/: 01_init.sql  02_seed.sql  03_comments.sql  04_replies_and_settings.sql  05_token_stats.sql  06_chat.sql  07_multi_user.sql  08_mcp_activity.sql  09_audit.sql  10_password_reset.sql  11_chat_multiuser.sql  12_better_auth.sql  13_section_access_log.sql
docs/: data-model.md  scaling.md  token-stats-metrics.md  tool-reference.md
frontend/: .gitignore  Dockerfile  next.config.ts  package.json  playwright.config.js  playwright.config.ts  server.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: auth.spec.ts  chat-panel.spec.ts  dependencies.spec.ts  global-setup.ts  project-workspace.spec.ts  projects-dashboard.spec.ts  settings.spec.ts  stats-dashboard.spec.ts  theme-toggle.spec.ts
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/tests/: login.spec.js
mcp_server/: Dockerfile  requirements.txt  server.py
scripts/: record_demo.py
shared/: constants.py  project_factory.py  settings.py  templates.py
tests/: conftest.py  requirements.txt  test_auth.py  test_mcp_tools.py  test_smoke.py  test_ui_api.py
ui/: Dockerfile  app.py  requirements.txt
ui/static/: MARKED_VERSION  (+2 more)
(+37 files in other folders)
